examples/kju/positive/functions/simple_call.kju
fun kju(): Unit
{
	var a: Int=f();
}
fun f(): Int 
{ 
    return 5;
}
