examples/kju/negative/lexer/unknown_char_at_the_beginning.kju
ą

fun main():Unit{
	var a:Int = 5;
}